2006-11-11  Daniel Wagner  <wagi@newton.monom.org>

	* src/bebob/bebob_avdevice.cpp (setSamplingFrequencyPlug): copy past
	error fixed. Reported by Jamie Gennis jgennis at gmail dot com

2006-10-07  Daniel Wagner  <wagi@newton.monom.org>

	* libfreebob-1.0 released

2006-06-24  Daniel Wagner  <wagi@monom.org>

	* tests/streaming/Makefile.am: Fixed build problem with missing '/'.

2006-06-10  Daniel Wagner  <wagi@monom.org>

	* Changed building rules: No static sub libraries
	are build anymore.

2006-06-01  Daniel Wagner  <wagi@monom.org>

	* configure.ac: Version bump to 1.0.0

	* Changed all FreeBob to FreeBoB
	* Removed all .cvsignore
	* Added Pieter to AUTHORS
	* Updated NEWS and README (release canditate date added)

2006-05-31  Daniel Wagner  <wagi@monom.org>

	* Free all allocated asprintf buffers after xmlNewChild.
	Compiler warning removed

2006-05-31  Pieter Palmers  <pieterpalmers@users.sourceforge.net>
    * src/devicemanager.cpp:
    - fixed some memory leaks
    * src/bebob_light/bebob_light_avdevice.cpp:
    - fixed some memory leaks
    - implemented a test to see if the correct AVC subunits are 
      present
    - fixed a bug that added NULL to the subunit list when an
      unsupported AVC subunit was found.
    * src/libfreebobavc/avc_generic.cpp:
    - fixed memory leak
    * src/libfreebobavc/ieee1394service.cpp:
    - fixed memory leak
    * src/libfreebobavc/avc_extended_plug_info.cpp:
    - fixed memory leak
    * src/libfreebobstreaming/messagebuffer.h:
    - add extern "C"
    * src/libfreebobstreaming/freebob_streaming.c:
    - fixed problem with verbosity setting not being passed on
    - reformatted some error/debug messages
    * configure.ac: version bump to 0.9.4

2006-05-29  Pieter Palmers  <pieterpalmers@users.sourceforge.net>
    - implemented a hacked solution to the naming problem when 
      using 2 identical devices. Now the port name is prefixed 
      with "dev#?" with # being the device number (in order of 